Update testng and arquilian version to work with JDK8
Signed-off-by: Jorge Bescos Gascon <jorge.bescos.gascon@oracle.com>